--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "mern-thinkboard": "file:..",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
